--- a/.gitignore
+++ b/.gitignore
@@ -283,3 +283,4 @@ pyrightconfig.json
 .ionide
 
 # End of https://www.toptal.com/developers/gitignore/api/python,django,visualstudiocode
+.vscode/tasks.json
